--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 <a name="top"></a>
-
+<img src="img/crepe.jpg" alt="La Petite Creperie" width="" height="">
   <header id="header" class="">
     <nav class="navbar is-transparent is-fixed-top">
       <div class="container">
