--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -19,98 +19,105 @@
   <title>La Petite Creperie</title>
   <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+  <link rel="stylesheet" href="css/estilos.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
-<a name="top"></a>
-<img src="img/crepe.jpg" alt="La Petite Creperie" width="" height="">
-  <header id="header" class="">
-    <nav class="navbar is-transparent is-fixed-top">
-      <div class="container">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="#top">
-        <img src="img/logo-navbar.png" alt="La Petite Creperie" width="112" height="28">
-        </a>
-        <!--<div class="navbar-burger burger" data-target="navMenuIndex">-->
-          <a role="button" class="navbar-burger burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        <!--</div>-->
-      </div>
-
-  <div id="navMenu" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="index.html">Bienvenida</a>
-      <a class="navbar-item" href="index.html">Sobre Nosotros</a>
-      <a class="navbar-item" href="index.html">Menu</a>
-      <a class="navbar-item" href="index.html">Promosiones especiales</a>
-      <a class="navbar-item" href="index.html">Nuestros Crepes</a>
-      <a class="navbar-item" href="index.html">Contacto</a>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" href="">
-          Docs
-        </a>
-        <div class="navbar-dropdown is-boxed">
-          <a class="navbar-item" href="">
-            Overview
-          </a>
-          <a class="navbar-item" href="">
-            Modifiers
-          </a>
-          <a class="navbar-item" href="">
-            Columns
-          </a>
-          <a class="navbar-item" href="">
-            Layout
-          </a>
-          <a class="navbar-item" href="">
-            Form
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item" href="">
-            Elements
-          </a>
-          <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
-            Components</a>
-          </div>
-      </div>
-
-
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="field is-grouped">
-          <p class="control">
-            <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="http://localhost:4000" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=http://localhost:4000&amp;via=jgthms">
-              <span class="icon">
-                <i class="fab fa-twitter"></i>
-              </span>
-              <span>
-                Tweet
-              </span>
-            </a>
-          </p>
-          <p class="control">
-            <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.7.2/bulma-0.7.2.zip">
-              <span class="icon">
-                <i class="fas fa-download"></i>
-              </span>
-              <span>Download</span>
-            </a>
-          </p>
-        </div>
-      </div>
-    </div>
+  <a name="top"></a>
+  <div class="header">
+    <img src="img/crepe.jpg" alt="La Petite Creperie" width="" height="">
   </div>
-</div>
-</div>
-</nav>
+
+  <header id="header" class="">
+    <section class="menu">
+      <nav class="navbar is-transparent ">
+        <div class="container">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="#top">
+              <img src="img/logo-navbar.png" alt="La Petite Creperie" width="112" height="28">
+            </a>
+            <!--<div class="navbar-burger burger" data-target="navMenuIndex">-->
+            <a role="button" class="navbar-burger burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+            <!--</div>-->
+          </div>
+
+          <div id="navMenu" class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item" href="index.html">Bienvenida</a>
+              <a class="navbar-item" href="index.html">Sobre Nosotros</a>
+              <a class="navbar-item" href="index.html">Menu</a>
+              <a class="navbar-item" href="index.html">Promosiones especiales</a>
+              <a class="navbar-item" href="index.html">Nuestros Crepes</a>
+              <a class="navbar-item" href="index.html">Contacto</a>
+              <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link" href="">
+                  Docs
+                </a>
+                <div class="navbar-dropdown is-boxed">
+                  <a class="navbar-item" href="">
+                    Overview
+                  </a>
+                  <a class="navbar-item" href="">
+                    Modifiers
+                  </a>
+                  <a class="navbar-item" href="">
+                    Columns
+                  </a>
+                  <a class="navbar-item" href="">
+                    Layout
+                  </a>
+                  <a class="navbar-item" href="">
+                    Form
+                  </a>
+                  <hr class="navbar-divider">
+                  <a class="navbar-item" href="">
+                    Elements
+                  </a>
+                  <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
+                    Components</a>
+                </div>
+              </div>
 
 
+              <div class="navbar-end">
+                <div class="navbar-item">
+                  <div class="field is-grouped">
+                    <p class="control">
+                      <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="http://localhost:4000" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=http://localhost:4000&amp;via=jgthms">
+                        <span class="icon">
+                          <i class="fab fa-twitter"></i>
+                        </span>
+                        <span>
+                          Tweet
+                        </span>
+                      </a>
+                    </p>
+                    <p class="control">
+                      <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.7.2/bulma-0.7.2.zip">
+                        <span class="icon">
+                          <i class="fas fa-download"></i>
+                        </span>
+                        <span>Download</span>
+                      </a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <div class="wrapper">
+    <img src="img/crepe.jpg" alt="La Petite Creperie" width="" height="">
+  </div>
 
-<script type="text/javascript">
+    <script type="text/javascript">
       (function () {
         var burger = document.querySelector('.burger');
         var nav = document.querySelector('#' + burger.dataset.target);
@@ -121,6 +128,27 @@
       })();
     </script>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+      posicionarMenu();
+
+      $(window).scroll(function () {
+        posicionarMenu();
+      });
+
+      function posicionarMenu() {
+        var alturaHeader = $('.header').outerHeight(true);
+        var alturaMenu = $('.menu').outerHeight(true);
+
+        if ($(window).scrollTop() >= alturaHeader) {
+          $('.menu').addClass('fixed');
+          $('.wrapper').css('margin-top', (alturaMenu) + 'px');
+        } else {
+          $('.menu').removeClass('fixed');
+          $('.wrapper').css('margin-top', '0');
+        }
+      }
+    </script>
 
 </body>
 
