agrtegado estilos, se modifico logo barra menu y favicon, se cambio color texto menu

--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 
           <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
-              <a class="navbar-item" href="index.html">Bienvenida</a>
-              <a class="navbar-item" href="index.html">Sobre Nosotros</a>
-              <a class="navbar-item" href="index.html">Menu</a>
-              <a class="navbar-item" href="index.html">Promosiones especiales</a>
-              <a class="navbar-item" href="index.html">Nuestros Crepes</a>
-              <a class="navbar-item" href="index.html">Contacto</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Bienvenida</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Sobre Nosotros</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Menu</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Promosiones especiales</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Nuestros Crepes</a>
+              <a class="navbar-item" href="index.html" style="color:#fc2b09">Contacto</a>
               <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link" href="">
-                  Docs
+                <a class="navbar-link" href="" style="color:#fc2b09">
+                  Menu
                 </a>
                 <div class="navbar-dropdown is-boxed">
                   <a class="navbar-item" href="">
-                    Overview
+                    Crepes Salados
                   </a>
                   <a class="navbar-item" href="">
-                    Modifiers
+                    Crepes Dulces
                   </a>
                   <a class="navbar-item" href="">
-                    Columns
+                    Ensaladas
                   </a>
                   <a class="navbar-item" href="">
                     Layout
