se realizo formulario de contacto en php con estilos propios contacto.css, se modifico el index, se creo el archivo process.php para procesar la informacion del formulario y enviarla y se creo 2 archivos js para validar los datos del formulario

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="navbar-item" href="index.html" style="color:#fc2b09">Menu</a>
               <a class="navbar-item" href="index.html" style="color:#fc2b09">Promosiones especiales</a>
               <a class="navbar-item" href="index.html" style="color:#fc2b09">Nuestros Crepes</a>
-              <a class="navbar-item" href="index.html" style="color:#fc2b09">Contacto</a>
+              <a class="navbar-item" href="contacto.php" style="color:#fc2b09">Contacto</a>
               <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link" href="" style="color:#fc2b09">
                   Menu
